tests/NormalTests/paczka1/fuzzy1/10875207.err
Error in line 7: 6TnJj96H866 A142 19,7
Error in line 6: S199 A922 82,1
Error in line 11: unni A142 45,0
Error in line 18: 7wfFwDDzoUW S199 57,8
Error in line 15: y9kKMy1ziJY A142 88,7
